<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dashboard_layout"
    android:background="@color/rest_color">

    <ImageView
        android:id="@+id/increment_number_of_rounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/add_icon"
        android:layout_alignBottom="@+id/number_of_rounds"
        android:layout_toRightOf="@+id/header_work_interval_time"
        android:layout_toEndOf="@+id/header_work_interval_time" />

    <TextView
        style="@style/DisplayType34"
        android:id="@+id/header_number_of_rounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/round_string"
        android:textColor="@color/primary_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <EditText
        style="@style/DisplayType34"
        android:id="@+id/number_of_rounds"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_number_of_rounds"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:gravity="center"
        android:inputType="phone"
        android:text="@string/default_number_of_rounds"/>


    <ImageView
        android:id="@+id/decrement_number_of_rounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/minus_icon"
        android:layout_alignBottom="@+id/number_of_rounds"
        android:layout_toLeftOf="@+id/header_work_interval_time"
        android:layout_toStartOf="@+id/header_work_interval_time" />










    <ImageView
        android:id="@+id/increment_round_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/add_icon"
        android:layout_alignBottom="@+id/work_interval_time"
        android:layout_toRightOf="@+id/header_work_interval_time"
        android:layout_toEndOf="@+id/header_work_interval_time" />

    <TextView
        style="@style/DisplayType34"
        android:id="@+id/header_work_interval_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_time"
        android:textColor="@color/primary_text"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/increment_number_of_rounds"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/work_interval_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_work_interval_time"
        android:layout_centerInParent="true">

        <EditText
            style="@style/DisplayType34"
            android:id="@+id/work_round_minutes"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:gravity="center"
            android:inputType="phone"
            android:text="@string/default_work_minutes"/>

        <TextView
            style="@style/DisplayType34"
            android:id="@+id/colon_for_work_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon_for_time" />

        <EditText
            style="@style/DisplayType34"
            android:id="@+id/work_round_seconds"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:gravity="center"
            android:inputType="phone"
            android:text="@string/default_work_seconds"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/decrement_round_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/minus_icon"
        android:layout_alignBottom="@+id/work_interval_time"
        android:layout_toLeftOf="@+id/header_work_interval_time"
        android:layout_toStartOf="@+id/header_work_interval_time" />










    <ImageView
        android:id="@+id/increment_rest_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/add_icon"
        android:layout_alignBottom="@+id/rest_round_seconds"
        android:layout_toRightOf="@+id/header_work_interval_time"
        android:layout_toEndOf="@+id/header_work_interval_time" />

    <TextView
        android:id="@+id/header_rest_interval_time"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest_time"
        android:textColor="@color/primary_text"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/work_interval_time"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:id="@+id/rest_round_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rest_round_minutes"
        android:layout_toLeftOf="@+id/rest_round_seconds"
        android:layout_toStartOf="@+id/rest_round_seconds">

        <TextView
            android:id="@+id/colon_for_rest_interval"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon_for_time"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/decrement_rest_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/minus_icon"
        android:layout_alignBottom="@+id/rest_round_minutes"
        android:layout_toLeftOf="@+id/header_work_interval_time"
        android:layout_toStartOf="@+id/header_work_interval_time" />

    <Button
        android:id="@+id/start_timer_button"
        style="@style/textSize20"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/decrement_rest_time"
        android:layout_alignStart="@+id/decrement_rest_time"
        android:layout_below="@+id/decrement_rest_time"
        android:layout_marginTop="22dp"
        android:elevation="24dp"
        android:text="@string/start_timer"></Button>

    <Button
        android:id="@+id/settings_button"
        style="@style/textSize20"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_above="@+id/custom_rounds"
        android:layout_alignEnd="@+id/custom_rounds"
        android:layout_alignRight="@+id/custom_rounds"
        android:elevation="24dp"
        android:text="@string/settings"></Button>

    <Button
        android:id="@+id/custom_rounds"
        style="@style/textSize20"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:elevation="24dp"
        android:text="Custom Rounds"
        android:layout_below="@+id/start_timer_button"
        android:layout_alignLeft="@+id/start_timer_button"
        android:layout_alignStart="@+id/start_timer_button"
        android:layout_alignRight="@+id/increment_rest_time"
        android:layout_alignEnd="@+id/increment_rest_time">

    </Button>

    <EditText
        android:id="@+id/rest_round_minutes"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_rest_interval_time"
        android:layout_toLeftOf="@+id/rest_round_time"
        android:layout_toStartOf="@+id/rest_round_time"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:gravity="center"
        android:inputType="phone"
        android:text="@string/default_rest_minutes"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/rest_round_seconds"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/work_interval_time"
        android:layout_alignRight="@+id/work_interval_time"
        android:layout_below="@+id/header_rest_interval_time"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:gravity="center"
        android:inputType="phone"
        android:text="@string/default_rest_seconds"
        android:textSize="32sp" />

</RelativeLayout>