<resources>
    <string name="app_name">Interval Timer</string>
    <string name="start_timer">Start</string>
    <string name="stop_timer">Stop</string>
    <string name="default_time">01:00</string>
    <string name="default_work_minutes">01</string>
    <string name="default_work_seconds">00</string>
    <string name="default_rest_minutes">00</string>
    <string name="default_rest_seconds">30</string>
    <string name="colon_for_time">:</string>
    <string name="default_number_of_rounds">1</string>
    <string name="round_time">Round Time</string>
    <string name="rest_time">Rest Time</string>
    <string name="round_string">Round</string>
    <string name="ad_id_banner">ca-app-pub-4108128512113208/8610877910</string>
    <string name="timer_complete_ad">ca-app-pub-4108128512113208/9564597438</string>
    <string name="test_ads">ca-app-pub-3940256099942544/1033173712</string>
    <string name="settings">Settings</string>
</resources>
