<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/timer_display"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <com.google.android.gms.ads.AdView
...
            style="@style/DisplayType34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/" />

        <TextView
            android:id="@+id/total_rounds"
            style="@style/DisplayType34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />
    </LinearLayout>

...
